templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: aitorcajasproyecto.com
    http:
      paths:
      - path: /dev
        pathType: Prefix
        backend:
          service:
            name: frontend-development
            port:
              number: 30000
      - path: /prod
        pathType: Prefix
        backend:
          service:
            name: frontend-production
            port:
              number: 30000
