templates/route-dev.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-dev
  namespace: acajas
spec:
  path: /
  to:
    kind: Service
    name: frontend-development
  port:
    targetPort: 8090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIEAzCCAuugAwIBAgIUU761VJDAYrOfX3z846RPlAd9VfIwDQYJKoZIhvcNAQEL
[...]
      7QLXB9AjKNK9R7U3BvI1BOBTw532a9s=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQCis5PGAITHOuBd
[...]
      lGDOqGngvX9gkyTetYg6LfWO
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIIEAzCCAuugAwIBAgIUJ3W6WQ8MbqeLDQlKuiNL4Vn3+OwwDQYJKoZIhvcNAQEL
[...]
      K02mR25ZdOhcVqse2Kd5YI13weeZ8zM=
      -----END CERTIFICATE-----
